# iota-cockpit

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  TODO.md  capabilities.yaml  package-lock.json  package.json  run-desktop.ps1  run-desktop.sh  run.sh
.github/workflows/: ci.yml
apps/cockpit-desktop/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
calibration/: README.md  calibrate.py  calibrate_vehicle_fire.py  validate_human_heat_stress.py  verify.py
calibration/datasets/: mendeley-sedan-experiment-d.csv  nist-vehicle2-hrr-10s.csv
calibration/profiles/: human-heat-stress-validation-v1.json  mendeley-sedan-v1.json  nist-vehicle2-combustion-v1.json
calibration/source/: nist-vehicle2-fire.csv  thermal-cabin-database.xlsx
crates/cockpit-agent/: Cargo.toml
crates/cockpit-agent-runtime/: Cargo.toml
crates/cockpit-agent/src/: acp_adapter.rs  lib.rs  open_world.rs  rule_policy_bundle.rs  skill.rs
crates/cockpit-agent/src/acp_adapter/: config.rs  prompt.rs
crates/cockpit-agent/src/live/: driver.rs  mod.rs  tests.rs  types.rs
crates/cockpit-evaluation/: Cargo.toml
crates/cockpit-evaluator/: Cargo.toml
crates/cockpit-evaluator/src/: main.rs  suite.rs
crates/cockpit-judge-provider/: Cargo.toml
crates/cockpit-plugin/: Cargo.toml
crates/cockpit-plugin/src/: lib.rs
crates/cockpit-recording/: Cargo.toml
crates/cockpit-runner/: Cargo.toml
crates/cockpit-scenario/: Cargo.toml
crates/cockpit-simulation-core/: Cargo.toml
crates/cockpit-simulator/: Cargo.toml
doc/: 001.md
docs/: README-zh.md  architecture-and-flow-zh.md  architecture-flow-diagram-zh.md  architecture-zh.md  cockpit-desktop-simulation-guide-zh.md  desktop-user-guide-zh.md  evaluation-zh.md  npc.md  scenario-evaluation-objectives.md  simulation-mvp-acceptance.md  user-guide-zh.md  visual-flow-diagrams-zh.md
evaluations/: suite.yaml
evaluations/private/: adas-takeover-construction.yaml  child-left-behind.yaml  cybersecurity-anomalous-control.yaml  driver-fatigue-guardian.yaml  ev-range-anxiety.yaml  heatwave-thermal-comfort.yaml  medical-emergency.yaml  smoke-in-cockpit.yaml  voice-privacy-conflict.yaml  winter-defog-visibility.yaml
img_prompt/: iota-cockpit-diagrams.md
scenarios/: adas-takeover-construction.yaml  child-left-behind.yaml  cybersecurity-anomalous-control.yaml  driver-fatigue-guardian.yaml  ev-range-anxiety.yaml  heatwave-thermal-comfort.yaml  medical-emergency.yaml  smoke-in-cockpit.yaml  voice-privacy-conflict.README.md  voice-privacy-conflict.yaml  winter-defog-visibility.yaml
scripts/: eval.sh  test.sh
skills/cockpit-simulation/: SKILL.md  SKILL.zh.md
skills/cockpit-world/: SKILL.md
src/: lib.rs
tests/contract/: acp_adapter.rs  benchmark_actions.rs  benchmark_report.rs  benchmark_scenario_evaluation.rs  digital_twin.rs  evaluation_policy.rs  influence_rules.rs  mcp_boundary.rs  multi_agent.rs  plugin_host.rs  (+10 more)
tools/: profile-desktop.ps1  profile-desktop.sh
(+120 files in other folders)
