[package]
name = "iota-cockpit-simulator"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
publish = false

[workspace]
members = [
  "crates/cockpit-simulation-core",
  "crates/cockpit-scenario",
  "crates/cockpit-recording",
  "crates/cockpit-evaluation",
  "crates/cockpit-runner",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.95.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
cockpit-simulation-core = { path = "crates/cockpit-simulation-core" }
cockpit-scenario = { path = "crates/cockpit-scenario" }
cockpit-recording = { path = "crates/cockpit-recording" }
cockpit-evaluation = { path = "crates/cockpit-evaluation" }

[dependencies]
cockpit-simulation-core.workspace = true
cockpit-scenario.workspace = true
cockpit-recording.workspace = true
cockpit-evaluation.workspace = true

[dev-dependencies]
serde_json.workspace = true

[[test]]
name = "smoke_replay"
path = "tests/determinism/smoke_replay.rs"
