[package]
name = "cockpit-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
# Opt-in wiring of the real iota-core ACP backend. The default build keeps the
# live driver backend-agnostic so `cargo test --workspace` stays deterministic
# and offline.
default = []
live-acp = ["dep:iota-core"]

[dependencies]
cockpit-world.workspace = true
base64.workspace = true
iota-core = { workspace = true, optional = true }
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[dev-dependencies]
cockpit-scenario.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
