[package]
name = "cockpit-evaluator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
cockpit-evaluation.workspace = true
cockpit-recording.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
