[package]
name = "cockpit-plugin"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cockpit-world.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
libc.workspace = true
ring.workspace = true
base64.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
] }
